--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "scripts": {
     "start": "brunch watch --server"
   },
-  "dependencies": {
-    "javascript-brunch": ">= 1.0 < 1.9",
-    "css-brunch": ">= 1.0 < 1.9",
-    "uglify-js-brunch": ">= 1.0 < 1.9",
-    "clean-css-brunch": ">= 1.0 < 1.9",
-    "auto-reload-brunch": ">= 1.0 < 1.9"
+  "devDependencies": {
+    "auto-reload-brunch": ">= 1.0 < 1.9",
+    "brunch": "^1.8.5",
+    "javascript-brunch": "^1.8.0",
+    "sass-brunch": "^1.9.1",
+    "uglify-js-brunch": ">= 1.0 < 1.9"
   }
 }
