--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "devDependencies": {
     "browser-sync": "^2.9.11",
     "brunch": "^1.8.5",
+    "brunch-static": "^1.0.0",
+    "html-brunch-static": "^1.1.0",
+    "jade-brunch-static": "^1.1.0",
     "javascript-brunch": "^1.8.0",
     "sass-brunch": "^1.9.1",
     "uglify-js-brunch": ">= 1.0 < 1.9"
