--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "brunch watch --server"
   },
   "devDependencies": {
+    "bootstrap": "twbs/bootstrap#v4-dev",
     "browser-sync": "^2.9.11",
     "brunch": "^1.8.5",
     "brunch-static": "^1.0.0",
