--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "scripts": {
     "start": "brunch watch --server"
   },
+  "dependencies": {
+    "bootstrap": "twbs/bootstrap#v4-dev"
+  },
   "devDependencies": {
-    "bootstrap": "twbs/bootstrap#v4-dev",
     "browser-sync": "^2.9.11",
     "brunch": "^1.8.5",
     "brunch-static": "^1.0.0",
@@ -20,5 +22,10 @@
     "javascript-brunch": "^1.8.0",
     "sass-brunch": "^1.9.1",
     "uglify-js-brunch": ">= 1.0 < 1.9"
+  },
+  "overrides": {
+    "bootstrap": {
+      "main": "dist/js/bootstrap.js"
+    }
   }
 }
